[package]
name = "tini"
description = "A tiny ini parser, written in Rust"
version = "0.1.1"
authors = ["Alexey Golubev <dr.freecx@gmail.com>", "Vova Abdrakhmanov <369565@gmail.com>"]
documentation = "http://pinecrew.github.io/tini/tini/"
repository = "https://github.com/pinecrew/tini"
keywords = ["ini"]

[lib]
name = "tini"

[[example]]
name = "test"

[[example]]
name = "read"
